# ats

./: .gitignore  CLAUDE.md  Cargo.toml
src/: app.rs  main.rs
src/services/: ecr.rs  manager.rs  mod.rs  traits.rs
src/ui/: content.rs  footer.rs  header.rs  input.rs  layout.rs  mod.rs
src/utils/: aws.rs
